--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.2.1",
     "file-loader": "^6.2.0",
     "next": "^13.2.3",
+    "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
