--- a/package.json
+++ b/package.json
@@ -5,22 +5,13 @@
   "license": "Apache-2.0",
   "author": "Prismic <contact@prismic.io> (https://prismic.io)",
   "scripts": {
-    "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
-    "next:dev": "next",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "slicemachine": "start-slicemachine",
-    "format": "prettier --write .",
-    "gen": "prismic-ts-codegen"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "@prismicio/client": "^7.0.1",
-    "@prismicio/helpers": "^2.3.9",
-    "@prismicio/next": "^1.2.1",
-    "@prismicio/react": "^2.6.2",
-    "@prismicio/slice-simulator-react": "^0.2.3",
-    "@react-three/drei": "^9.65.4",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
@@ -34,18 +25,11 @@
     "three": "^0.151.3"
   },
   "devDependencies": {
-    "@prismicio/types": "^0.2.7",
-    "@slicemachine/adapter-next": "^0.1.3",
     "@types/react": "18.0.28",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint": "8.35.0",
     "eslint-config-next": "^13.2.3",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.4",
-    "prismic-ts-codegen": "^0.1.5",
-    "slice-machine-ui": "^1.0.3",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.21"
   }
 }
