--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -15,4 +15,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: chatgpt
-          source: pages/api/chatGpt.ts
+          source: pages/api/chat-gpt/index.js
