--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "aws-sdk": "^2.1404.0",
     "bootstrap": "^5.2.3",
     "clsx": "^1.2.1",
     "file-loader": "^6.2.0",
