--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^6.2.0",
     "next": "^13.2.3",
     "openai": "^3.2.1",
+    "pexels": "^1.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
